@@ -1,5 +1,11 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+6/5/14: Made 3dmod automatically get piece coordinates from a .pl file
+with same root name as single image file entered (In 4.7).
+
+6/5/14: Fixed Tomopitch so its output is parsable by eTomo for shift or
+thickness more than 1000 (In 4.7).
+
 6/3/14: Made 3dmod automatically look for piece coordinates in an associated
 .mdoc file and eliminated -pm option, which was not in the man page (In 4.7).
 
